--- a/web_static/5-index.html
+++ b/web_static/5-index.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/x-icon" href="./images/icon.png" />
     <link rel="stylesheet" type="text/css" href="./styles/4-common.css" />
     <link rel="stylesheet" type="text/css" href="./styles/3-header.css" />
-    <link rel="stylesheet" type="text/css" href="./styles/4-filters.css" />
+    <link rel="stylesheet" type="text/css" href="./styles/5-filters.css" />
     <link rel="stylesheet" type="text/css" href="./styles/3-footer.css" />
 </head>
 
@@ -17,6 +17,16 @@
     </header>
     <div class="container">
         <section class="filters">
+            <div class="left-items">
+                <div class="locations">
+                    <h3>States</h3>
+                    <h4>Addis Ababa</h4>
+                </div>
+                <div class="amenities">
+                    <h3>Amenities</h3>
+                    <h4>Two bed rooms</h4>
+                </div>
+            </div>
             <button> Search </button>
         </section>
     </div>
